WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71106
[Qt] Fix the Ctrl behavior for touch mocking in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=71106
Summary
[Qt] Fix the Ctrl behavior for touch mocking in MiniBrowser.
Jocelyn Turcotte
Reported
2011-10-28 04:04:58 PDT
[Qt] Fix the Ctrl behavior for touch mocking in MiniBrowser.
Attachments
Patch
(6.13 KB, patch)
2011-10-28 04:08 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2011-10-28 04:08:10 PDT
Created
attachment 112843
[details]
Patch
Simon Hausmann
Comment 2
2011-10-28 04:20:35 PDT
Comment on
attachment 112843
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=112843&action=review
> Tools/ChangeLog:15 > + It also removes the touch QEvent::Type logic since it's currently handled > + by QtGui by observing the modified touch points.
Nice catch :)
WebKit Review Bot
Comment 3
2011-10-28 05:28:47 PDT
Comment on
attachment 112843
[details]
Patch Clearing flags on attachment: 112843 Committed
r98719
: <
http://trac.webkit.org/changeset/98719
>
WebKit Review Bot
Comment 4
2011-10-28 05:28:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug