[Qt] Fix the Ctrl behavior for touch mocking in MiniBrowser. https://bugs.webkit.org/show_bug.cgi?id=71106

Reviewed by Simon Hausmann.

Holding Ctrl allows multiple touch points to be held on the screen using
mouse buttons. It would previously only prevent TouchReleased to be sent
and would require another MouseButtonRelease to be sent without holding Ctrl.

This patch makes sure that all held touch points are released when Ctrl
is released if MouseButtonRelease was received.
It also removes the touch QEvent::Type logic since it's currently handled
by QtGui by observing the modified touch points.

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::notify):
(MiniBrowserApplication::sendTouchEvent):
* MiniBrowser/qt/MiniBrowserApplication.h:


Canonical link: https://commits.webkit.org/87343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98719 268f45cc-cd09-0410-ab3c-d52691b4dbfc